# rag

./: .dockerignore  .env.example  .gitignore  .pr_agent.toml  .pre-commit-config.yaml  404.html  AGENTS.md  Makefile  README.md  alembic.ini  docker-compose.e2e.yml  docker-compose.test.yml  docker-compose.yml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.agents/: README.md  architecture.md  behavior.md  coding.md  documentation.md  git.md  project.md  testing.md
.agents/checklists/: before-coding.md  before-commit.md
.agents/workflows/: add-adr.md  add-service.md  implement-feature.md  update-docs.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  pr-agent.yml  publish-helm-chart.yml  publish-images.yml
adr/: index.html
adr/000-problem-definition-and-scope/: index.html
adr/001-data-sources-and-ingestion/: index.html
adr/002-storage-and-metadata-topology/: index.html
api_service/: Dockerfile  README.md  __init__.py  chat.py  main.py  retrieval.py
architecture/: index.html
docs/: docs-requirements.txt  mkdocs.yml
embedding_service/: Dockerfile  README.md  __init__.py  main.py
ingestion_worker/: Dockerfile  README.md  __init__.py  chunking.py  filesystem.py  main.py  parsing.py  pipeline.py  worker.py
javascripts/: mermaid-init.js
migrations/: README.md  env.py
modules/: index.html
schemas/: index.html
search/: search_index.json
shared/: README.md  __init__.py  config.py  db.py  file_cleanup.py  repository.py  schemas.py  vector_index.py
tests/: Dockerfile  __init__.py
(+123 files in other folders)
