[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-rag"
version = "0.1.0"
description = "Self-hosted personal RAG system with Dockerized services and local models."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13",
    "fastapi>=0.110",
    "psycopg[binary]>=3.1",
    "pypdf>=4.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mypy>=1.8",
    "pre-commit>=3.7",
    "pymdown-extensions>=10.0",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.setuptools]
packages = [
    "api_service",
    "api_service.testing",
    "embedding_service",
    "embedding_service.testing",
    "ingestion_worker",
    "ingestion_worker.testing",
    "shared",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["api_service", "embedding_service", "ingestion_worker", "shared"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
